implemented try-catch, then also I am getting errors. :)